corrected cutoff on mobile and added flexbox projs

--- a/default.css
+++ b/default.css
@@ -1,11 +1,11 @@
-
-html, body
+html, body 
 {
 	height: 100%;
-}
+} 
 
 body
 {
+	height: 100%;
 	margin: 0px;
 	padding: 0px;
 	background: #3D3D3D;
@@ -56,7 +56,7 @@ a:hover
 .container
 {
 	margin: 0px auto;
-	width: 1200px;
+	width: 100%;
 }
 
 /*********************************************************************************/
@@ -510,7 +510,7 @@ ul.contact li a.icon-rss:before
 	
 	#menu .current_page_item a
 	{
-		color: #FFF;
+		color: #C2C5CC;
 	}
 
 /*********************************************************************************/
@@ -744,7 +744,7 @@ ul.contact li a.icon-rss:before
 
 .column1,  .column2,  .column3,  .column4
 {
-	width: 392px;
+	width: 300px;
 	float: left;
 	/* display: inline-block; */
 }
@@ -946,7 +946,9 @@ ul.contact li a.icon-rss:before
 
 .extra2
 {
-
+	display: flex;
+	justify-content: center;
+	/* align-items: center; */
 }
 
 .extra2 .icon
